--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,7 @@
   <meta name="description" content="Give yourself some quiet time with these small meditation sessions!" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect"
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect"
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,400;1,300&display=swap"
-    rel="stylesheet">
-  <title>Meditation App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">  <title>Meditation App</title>
 </head>
 
 <body>
